fix overlapping minimize icon

--- a/Resources/views/frontend/_public/src/less/_modules/yellow-box.less
+++ b/Resources/views/frontend/_public/src/less/_modules/yellow-box.less
@@ -56,6 +56,10 @@
         .unitize-padding(4, 7, 5);
     }
 
+    .yellow-box--inner {
+        .unitize(margin-top, 35);
+    }
+
     &.minimized {
         cursor: pointer;
         .unitize-width(35);
